# html_query_parser

./: CHANGELOG.md  Cargo.toml  README.md
src/: attrs.rs  edit.rs  html.rs  lib.rs  parse.rs  query.rs  token.rs  trim.rs
src/parse/: token.rs
tests/: edit.rs  html.rs  parse.rs  query.rs  tag.rs  trim.rs
